updated notebook code

--- a/data_collection/Song_List_data2.ipynb
+++ b/data_collection/Song_List_data2.ipynb
@@ -2111,6 +2111,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "247035"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df9.shape[0] + df10.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
    "outputs": [
@@ -2147,6 +2167,26 @@
    ],
    "source": [
     "44572 + 49985 + 453231 + 118743"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.947582326390997"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "728156 / 247035 "
    ]
   },
   {
