--- a/example_notebooks/model_notebook_v1.ipynb
+++ b/example_notebooks/model_notebook_v1.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
-    "id": "NMoV_svz03-T",
+    "colab": {},
     "colab_type": "code",
-    "colab": {}
+    "id": "NMoV_svz03-T"
    },
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
-    "id": "l6a6B_tf3I4t",
+    "colab": {},
     "colab_type": "code",
-    "colab": {}
+    "id": "l6a6B_tf3I4t"
    },
    "outputs": [],
    "source": [
@@ -51,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
-    "id": "TsdBR5J328to",
+    "colab": {},
     "colab_type": "code",
-    "colab": {}
+    "id": "TsdBR5J328to"
    },
    "outputs": [],
    "source": [
@@ -68,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
-    "id": "6NRokuVb29PS",
+    "colab": {},
     "colab_type": "code",
-    "colab": {}
+    "id": "6NRokuVb29PS"
    },
    "outputs": [],
    "source": [
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
-    "id": "47FejwAG3CNv",
+    "colab": {},
     "colab_type": "code",
-    "colab": {}
+    "id": "47FejwAG3CNv"
    },
    "outputs": [],
    "source": [
@@ -112,14 +112,27 @@
  "metadata": {
   "colab": {
    "name": "Untitled20.ipynb",
-   "version": "0.3.2",
-   "provenance": []
+   "provenance": [],
+   "version": "0.3.2"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
